--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -80,7 +80,7 @@
         position: relative;height: 619px;margin: 250px 0 301px;
         iframe{float: right;width: 1100px;height: 619px;}
         a{
-            position: absolute;bottom: 0;left: 73px;font-size: 22px;
+            position: absolute;top: 50%;left: 69px;font-size: 22px;
             &:hover,&:focus{text-decoration: underline;}
         }
     }
@@ -230,10 +230,16 @@
 //project
 #projectCnt{
     position: relative;
+    .w1400{padding: 153px 0 145px;}
     .tit{font-family: NtSnasKR;font-size: 36px;}
     .subtit{font-size: 30px;}
+    .txt,.img_wrap{float: left;}
+    .img_wrap{
+        /* @include transY-50;
+        position: absolute;left: 0;top: 50%; */text-align: center;width: 778px;height: 389px;overflow: hidden;padding-top: 105px;
+    }
     .txt{
-        position: absolute;top: 153px;right: 0;width: 482px;text-align: right;
+        /* position: absolute;top: 153px;right: 0; */width: 482px;text-align: right;
         .page,.text{font-size: 22px;}
         .website,.role{font-size: 25px;}
         .page{margin: 60px 0 39px;}
@@ -250,14 +256,11 @@
         .sitego{color: #ffffff;background: url("../images/icon/sitego.svg") no-repeat;padding: 18px 0 0 12px;}
         //.linkgo{color: $orange;background: url("../images/icon/infogo.svg") no-repeat;padding: 18px 0 0 19px;}
     }
-    .img_wrap{
-        @include transY-50;
-        position: absolute;left: 0;top: 50%;text-align: center;width: 778px;height: 389px;overflow: hidden;
-    }
+    
     .controller{
         position: absolute;top: 70px;left: 0;width: 100%;text-align: center;
         button{
-            position: relative;font-size: 20px;
+            position: relative;font-size: 20px;cursor: url("../images/icon/pointer-1.cur"),url("../images/icon/pointer-1.svg"),pointer;
             &::after{
                 @include transY-50;
                 content:"";position: absolute;top: 50%;
@@ -279,7 +282,6 @@
 }
 //info 
 .info{
-    .tit{margin-top: 134px;}
     .tit+p,.subtit,.color>strong,.color>p,.font>strong,.font>p{text-align: center;}
     .tit+p{font-size: 20px;}
     .color>strong,.color>p,.font>strong,.font>p{color: $gray;}
@@ -369,21 +371,21 @@
 }
 
 .project{
-    /* position: absolute;top: 1080px;left: 0;width: 100%; */height: 960px;
     &,.prev,.next{color: #ffffff;}
 }
-#what,#kids{
-    .w1400{height: 100%;}
+#jaenung .img_wrap,#what .img_wrap{
+    img{
+        @include animation(imgmove 10s linear infinite);
+        
+    }
+    
 }
-
 #jaenung ,#jaenung_info{background: $lightGray;}
 #jaenung{
     z-index:3;
     &,.prev,.next{color: $darkGray;}
-    .w1400{height: 100%;}
-    .img_wrap{
-        .img{width: 778px;height: 389px;}
-    }
+    .img_wrap{width: 778px;height: 389px;}
+    .txt{margin-left: 140px;}
     
 }
 #jaenung_info{
@@ -428,13 +430,14 @@
         .mid .circle{top: 81px;}
         .right .circle{top: 154px;}
     }
-    .sitego{bottom: 200px;}
+    .sitego{bottom: 120px;}
 }
 
 #what,#what_info{background: $darkGray;}
 #what{
     z-index:2;
-    .img_wrap{width: 337px;height: 571.5px;left: 100px;}
+    .img_wrap{width: 337px;height: 571.5px;margin-left: 93px;padding-top: 35px;}
+    .txt{margin-left: 488px;}
     .controller .prev{margin-right: 65px;}
 }
 #what_info{
@@ -471,27 +474,25 @@
         }
     }
     .coding{
-        margin: 220px 0 650px;
+        margin: 220px 0 400px;
         .flex p{text-align: left;}
         .circle{top: 60px;}
     }
-    .sitego{bottom: 200px;}
+    .sitego{bottom: 220px;}
 }
 
 #kids{background: #0252A6;}
 #kids{
-    z-index:1;
+    .w1400{padding-bottom: 170px;}
+    .img_wrap{width: 718px;height: 449px;}
     .txt{
-        width: 600px;
+        width: 600px;margin-left: 82px;
         .text{margin-top: 136px;}
     }
-    .img_wrap{
-        width: 718px;height: 537px;
-        .img{width: 718px;height: 449px;}
-    }
+    
 }
 #kids_info{
-    color: $darkGray;
+    color: $darkGray;background: #ffffff;
     .cnt1{
         margin-top: 50px;
         li{
@@ -672,4 +673,9 @@
 @include keyframes(flash){
     0%{opacity:0}
 	100%{opacity:1}
+}
+@include keyframes(imgmove){
+    0%{@include transform(translateY(0));}
+    98%{@include transform(translateY(-85%));}
+    100%{@include transform(translateY(0));}
 }
