--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -266,16 +266,17 @@
                 content:"";position: absolute;top: 50%;
             }
         }
+        .prev{
+            margin-right: 100px;
+            &::after{
+                @include cover;
+                left: -32px;background: url("../images/icon/prev.svg") no-repeat;width: 27px;height: 26px;
+            }
+        }
         .next{
             &::after{
                 @include cover;
                 right: -32px;background: url("../images/icon/next.svg") no-repeat;width: 27px;height: 26px;
-            }
-        }
-        .prev{
-            &::after{
-                @include cover;
-                left: -32px;background: url("../images/icon/prev.svg") no-repeat;width: 27px;height: 26px;
             }
         }
     }
@@ -374,10 +375,7 @@
     &,.prev,.next{color: #ffffff;}
 }
 #jaenung .img_wrap,#what .img_wrap{
-    img{
-        @include animation(imgmove 10s linear infinite);
-        
-    }
+    img{@include animation(imgmove 10s linear infinite);}
     
 }
 #jaenung ,#jaenung_info{background: $lightGray;}
@@ -551,11 +549,13 @@
             width: 757px;margin: 106px 0 0 63px;
             .left,.right{padding: 0;text-align: center;}
             .left{
+                .title{margin-top: 45px;}
                 .big,.small{font-family: jalnan;}
                 .big{color: #FFBA1F;}
                 .small{color:#FFCB64;}
             }
             .right{
+                .title{margin-top: 70px;}
                 .big,.small{font-family: NtSansKR;}
                 .big{color:#C46311;}
                 .small{color:#DF8340;}
@@ -620,6 +620,42 @@
             img{left: 943px;}
         }
     }
+}
+
+#report{.w1400{border: 1px solid gold;}
+    background: url("../images/report/report_bg.png") repeat-y;color: #ffffff;padding-top: 120px;
+    .tit,strong{font-weight: 400;}
+    .tit{font-size: 36px;}
+    .tablist{
+        margin: 40px 0 80px;height: 70px;
+        .tab{
+            position: relative;float: left;width: 350px;text-align: center;height: 100%;line-height: 70px;cursor: url("../images/icon/pointer-1.cur"),url("../images/icon/pointer-1.svg"),pointer;
+            &::after{
+                @include transition(width 0.3s ease 0s, left 0.3s ease 0s);
+                content: "";position: absolute;left: 50%;bottom: 0;height: 5px;width: 0;
+            }
+            &:nth-child(1)::after{background: $red;}
+            &:nth-child(2)::after{background: $yellow;}
+            &:nth-child(3)::after{background: #44AEC6;}
+            &:nth-child(4)::after{background: $orange;}
+
+            &:hover::after,&:focus::after,&.active::after{width: 100%;left: 0;}
+        }
+    }
+    strong{
+        font-size: 23px;
+        &+p{margin: 60px 0 30px;}
+    }
+    .tabpanel{
+        display:none;
+        &.active{display: block;}
+        ul li{
+            line-height: 1.5;
+            &+li{margin-top: 15px;}
+        }
+        .img{margin: 60px 0 100px;}
+    }
+
 }
 
 @include keyframes(rotate){
