--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -234,12 +234,9 @@
     .tit{font-family: NtSnasKR;font-size: 36px;}
     .subtit{font-size: 30px;}
     .txt,.img_wrap{float: left;}
-    .img_wrap{
-        /* @include transY-50;
-        position: absolute;left: 0;top: 50%; */text-align: center;width: 778px;height: 389px;overflow: hidden;padding-top: 105px;
-    }
+    .img_wrap{ text-align: center;width: 778px;height: 389px;overflow: hidden;margin-top: 105px;}
     .txt{
-        /* position: absolute;top: 153px;right: 0; */width: 482px;text-align: right;
+        width: 482px;text-align: right;
         .page,.text{font-size: 22px;}
         .website,.role{font-size: 25px;}
         .page{margin: 60px 0 39px;}
@@ -254,7 +251,6 @@
             display:inline-block;font-size: 15px;width: 131px;height: 56px;
         }
         .sitego{color: #ffffff;background: url("../images/icon/sitego.svg") no-repeat;padding: 18px 0 0 12px;}
-        //.linkgo{color: $orange;background: url("../images/icon/infogo.svg") no-repeat;padding: 18px 0 0 19px;}
     }
     
     .controller{
@@ -434,7 +430,7 @@
 #what,#what_info{background: $darkGray;}
 #what{
     z-index:2;
-    .img_wrap{width: 337px;height: 571.5px;margin-left: 93px;padding-top: 35px;}
+    .img_wrap{width: 337px;height: 571.5px;margin: 35px 0 0 93px;}
     .txt{margin-left: 488px;}
     .controller .prev{margin-right: 65px;}
 }
@@ -638,7 +634,6 @@
             &:nth-child(2)::after{background: $yellow;}
             &:nth-child(3)::after{background: #44AEC6;}
             &:nth-child(4)::after{background: $orange;}
-
             &:hover::after,&:focus::after,&.active::after{width: 100%;left: 0;}
         }
     }
@@ -653,7 +648,19 @@
             line-height: 1.5;
             &+li{margin-top: 15px;}
         }
-        .img{margin: 60px 0 100px;}
+        .img{
+            margin: 60px 0 100px;text-align: center;
+            img{border: 1px solid #fff;}
+        }
+    }
+    #tabpanel1 .img2{margin-bottom: 200px;}
+    #tabpanel2{
+        .img4 img{border: none;}
+        .img5{
+            img:nth-child(1){display:block;}
+            img:nth-child(2){position: relative;}
+            img:nth-child(3){position: absolute;left: 50%;}
+        }
     }
 
 }
