--- a/assets/css/common.scss
+++ b/assets/css/common.scss
@@ -22,6 +22,21 @@ header,nav,section,article,footer{display: block;}
 .w1400{max-width: 1400px;width: 100%;margin: 0 auto;overflow: hidden;}
 .f_orange{color: $orange;}
 
+.fade{
+    @include transition(all 0.5s);
+    opacity: 0;
+    &.up{@include transform(translateY(40px));}
+    &.down{@include transform(translateY(-40px));}
+    &.fd_right{@include transform(translateX(-40px));}
+    &.fd_left{@include transform(translateX(40px));}
+}
+
+.fade.on{
+    opacity: 1;
+    &.up,&.down{@include transform(translateY(0));}
+    &.fd_left,&.fd_right{@include transform(translateX(0));}
+}
+
 body{
     @include boxsizing;
     font-family: jeju,NtSansKR,poppins,serif;font-weight: 400;font-style: normal;font-size: 18px;color: $darkGray;line-height: 1.2;word-break: keep-all;
@@ -42,7 +57,7 @@ body{
     .email{
         @include transform(rotate(90deg));
         transform-origin: top right;
-        right: 20px;top: 260%;font-size: 16px;
+        right: 20px;top: 240px;font-size: 16px;
     }
 }
 .gnb{
