--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -2,7 +2,7 @@
 @import "_var","_mixin","_function";
 
 #cnt1{
-    position: relative;background: $lightGray;padding-top: 96px;
+    position: relative;background: $lightGray;padding-top: 96px;overflow: hidden;
     background-image: url("../images/main/mint_flower.svg"),url("../images/main/plus.svg"),url("../images/main/triangle.svg"),url("../images/main/red_flower.svg");
     background-repeat: no-repeat;
     background-position: 896px 243px,1862px 280px,1386px 777px,219px 800px;
@@ -38,7 +38,7 @@
 #cnt3{
     text-align: center;
     p:nth-child(1){margin-top: 180px;}
-    strong{display:block;font-size: 30px;font-weight: 400;background: #fff;width: 500px;border:5px solid #0BA9E9;background: #ffffff;padding: 56px 97.5px;margin: 90px auto 48px;}
+    a{display:block;font-size: 30px;font-weight: 400;background: #fff;width: 500px;border:5px solid #0BA9E9;background: #ffffff;padding: 56px 97.5px;margin: 90px auto 48px;}
 }
 
 @keyframes flower{
