--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -465,10 +465,21 @@
     text-align: center;
     line-height: 50px; }
 #skill .movetxt {
-  margin-top: 89px; }
-  #skill .movetxt marquee {
-    font-size: 36px; }
+  margin-top: 89px;
+  overflow: hidden; }
+  #skill .movetxt p {
+    font-size: 36px;
+    width: 142%; }
+  #skill .movetxt .full {
+    -webkit-animation: movetxt 20s linear infinite;
+    -moz-animation: movetxt 20s linear infinite;
+    -o-animation: movetxt 20s linear infinite;
+    animation: movetxt 20s linear infinite; }
   #skill .movetxt .line {
+    -webkit-animation: movetxtReverse 15s linear infinite;
+    -moz-animation: movetxtReverse 15s linear infinite;
+    -o-animation: movetxtReverse 15s linear infinite;
+    animation: movetxtReverse 15s linear infinite;
     font-family: hopang;
     margin-top: 20px; }
 
@@ -1699,5 +1710,109 @@
     -o-transform: translateY(0);
     -ms-transform: translateY(0);
     transform: translateY(0); } }
+@-webkit-keyframes movetxt {
+  0% {
+    -webkit-transform: translateX(80%);
+    -moz-transform: translateX(80%);
+    -o-transform: translateX(80%);
+    -ms-transform: translateX(80%);
+    transform: translateX(80%); }
+  100% {
+    -webkit-transform: translateX(-100%);
+    -moz-transform: translateX(-100%);
+    -o-transform: translateX(-100%);
+    -ms-transform: translateX(-100%);
+    transform: translateX(-100%); } }
+@-moz-keyframes movetxt {
+  0% {
+    -webkit-transform: translateX(80%);
+    -moz-transform: translateX(80%);
+    -o-transform: translateX(80%);
+    -ms-transform: translateX(80%);
+    transform: translateX(80%); }
+  100% {
+    -webkit-transform: translateX(-100%);
+    -moz-transform: translateX(-100%);
+    -o-transform: translateX(-100%);
+    -ms-transform: translateX(-100%);
+    transform: translateX(-100%); } }
+@-o-keyframes movetxt {
+  0% {
+    -webkit-transform: translateX(80%);
+    -moz-transform: translateX(80%);
+    -o-transform: translateX(80%);
+    -ms-transform: translateX(80%);
+    transform: translateX(80%); }
+  100% {
+    -webkit-transform: translateX(-100%);
+    -moz-transform: translateX(-100%);
+    -o-transform: translateX(-100%);
+    -ms-transform: translateX(-100%);
+    transform: translateX(-100%); } }
+@keyframes movetxt {
+  0% {
+    -webkit-transform: translateX(80%);
+    -moz-transform: translateX(80%);
+    -o-transform: translateX(80%);
+    -ms-transform: translateX(80%);
+    transform: translateX(80%); }
+  100% {
+    -webkit-transform: translateX(-100%);
+    -moz-transform: translateX(-100%);
+    -o-transform: translateX(-100%);
+    -ms-transform: translateX(-100%);
+    transform: translateX(-100%); } }
+@-webkit-keyframes movetxtReverse {
+  0% {
+    -webkit-transform: translateX(-100%);
+    -moz-transform: translateX(-100%);
+    -o-transform: translateX(-100%);
+    -ms-transform: translateX(-100%);
+    transform: translateX(-100%); }
+  100% {
+    -webkit-transform: translateX(80%);
+    -moz-transform: translateX(80%);
+    -o-transform: translateX(80%);
+    -ms-transform: translateX(80%);
+    transform: translateX(80%); } }
+@-moz-keyframes movetxtReverse {
+  0% {
+    -webkit-transform: translateX(-100%);
+    -moz-transform: translateX(-100%);
+    -o-transform: translateX(-100%);
+    -ms-transform: translateX(-100%);
+    transform: translateX(-100%); }
+  100% {
+    -webkit-transform: translateX(80%);
+    -moz-transform: translateX(80%);
+    -o-transform: translateX(80%);
+    -ms-transform: translateX(80%);
+    transform: translateX(80%); } }
+@-o-keyframes movetxtReverse {
+  0% {
+    -webkit-transform: translateX(-100%);
+    -moz-transform: translateX(-100%);
+    -o-transform: translateX(-100%);
+    -ms-transform: translateX(-100%);
+    transform: translateX(-100%); }
+  100% {
+    -webkit-transform: translateX(80%);
+    -moz-transform: translateX(80%);
+    -o-transform: translateX(80%);
+    -ms-transform: translateX(80%);
+    transform: translateX(80%); } }
+@keyframes movetxtReverse {
+  0% {
+    -webkit-transform: translateX(-100%);
+    -moz-transform: translateX(-100%);
+    -o-transform: translateX(-100%);
+    -ms-transform: translateX(-100%);
+    transform: translateX(-100%); }
+  100% {
+    -webkit-transform: translateX(80%);
+    -moz-transform: translateX(80%);
+    -o-transform: translateX(80%);
+    -ms-transform: translateX(80%);
+    transform: translateX(80%); } }
 
 /*# sourceMappingURL=style.css.map */
