--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -221,9 +221,10 @@
         }
     }
     .movetxt{
-        margin-top: 89px;
-        marquee{font-size: 36px;}
-        .line{font-family: hopang;margin-top: 20px;}
+        margin-top: 89px;overflow:hidden;
+        p{font-size: 36px;width: 142%;}
+        .full{@include animation(movetxt 20s linear infinite);}
+        .line{@include animation(movetxtReverse 15s linear infinite);font-family: hopang;margin-top: 20px;}
     }
 }
 
@@ -731,4 +732,12 @@
     0%{@include transform(translateY(0));}
     98%{@include transform(translateY(-85%));}
     100%{@include transform(translateY(0));}
+}
+@include keyframes(movetxt){
+    0%{@include transform(translateX(80%));}
+    100%{@include transform(translateX(-100%));}
+}
+@include keyframes(movetxtReverse){
+    0%{@include transform(translateX(-100%));}
+    100%{@include transform(translateX(80%));}
 }
